# cartocrow

./: .gitignore  CMakeLists.txt  README.md  polygon.ipe
.github/workflows/: build-linux.yml
airplanes/: to_mp4.sh  to_png.ps1
cartocrow/: CMakeLists.txt
cartocrow/chorematic_map/: CMakeLists.txt
cartocrow/circle_segment_helpers/: approximate_convex_hull_of_disks.cpp  approximate_convex_hull_of_disks.h  cavc_helpers.cpp  cavc_helpers.h  cavc_helpers.hpp  circle_tangents.cpp  circle_tangents.h  cs_curve_helpers.cpp  cs_curve_helpers.h  cs_polygon_helpers.cpp  cs_polygon_helpers.h  cs_polyline_helpers.cpp  cs_polyline_helpers.h  cs_render_helpers.cpp  cs_render_helpers.h  cs_types.cpp  cs_types.h  poly_line_gon_intersection.cpp  poly_line_gon_intersection.h
cartocrow/core/: CMakeLists.txt  arrangement_helpers.h  arrangement_map.h  arrangement_map.hpp  bezier.cpp  bezier.h  boundary_map.h  core.cpp  core.h  cropped_voronoi.h  cubic_bezier.cpp  cubic_bezier.h  delaunay_voronoi_helpers.h  ellipse.cpp  ellipse.h  general_polyline.h  halfplane.h  polygon_helpers.h  polyline.cpp  polyline.h  polyline_set.cpp  polyline_set.h  rectangle_helpers.cpp  rectangle_helpers.h  region_arrangement.cpp  region_map.h  root_finding_helpers.h  segment_delaunay_graph_helpers.cpp  segment_delaunay_graph_helpers.h  segment_delaunay_graph_helpers_cgal_adapted.h  stopwatch.cpp  stopwatch.h  transform_helpers.cpp  transform_helpers.h  vector_helpers.cpp  vector_helpers.h
cartocrow/flow_map/: intersections.cpp  polar_line.cpp  polar_point.cpp  spiral.cpp  spiral_tree.cpp  sweep_circle.cpp  sweep_edge.cpp  sweep_interval.cpp
cartocrow/isoline_simplification/: voronoi_helpers.cpp  voronoi_helpers.h
cartocrow/kinetic_kelp/: CMakeLists.txt  cat_point.cpp  cat_point.h  draw_settings.h  hash.h  input.cpp  input.h  input_instance.cpp  input_instance.h  kelp.cpp  kelp.h  kinetic_kelp_painting.cpp  kinetic_kelp_painting.h  moving_cat_point.h  parse_input.cpp  parse_input.h  point_id_painting.cpp  point_id_painting.h  pseudotriangulation.cpp  pseudotriangulation.h  pseudotriangulation_painting.cpp  pseudotriangulation_painting.h  route_edges.cpp  route_edges.h  settings.h  state.h  state_geometry.cpp  state_geometry.h  state_geometry_painting.cpp  state_geometry_painting.h  trajectory.cpp  trajectory.h  types.h
cartocrow/mosaic_cartogram/: mosaic_cartogram.cpp  mosaic_cartogram.h
cartocrow/necklace_map/: circle_necklace.cpp  circular_range.cpp  necklace_interval.cpp
cartocrow/necklace_map/check_feasible/: check_feasible.cpp  check_feasible_exact.cpp  check_feasible_heuristic.cpp
cartocrow/necklace_map/detail/: task.cpp  validate_scale_factor.cpp
cartocrow/necklace_map/feasible_interval/: compute_feasible_interval_centroid.cpp  compute_feasible_interval_wedge.cpp
cartocrow/necklace_map/scale_factor/: compute_scale_factor.cpp
cartocrow/necklace_map/valid_placement/: compute_valid_placement.cpp
cartocrow/reader/: CMakeLists.txt  boundary_map_reader.cpp  boundary_map_reader.h  gdal_conversion.cpp  gdal_conversion.h  ipe_reader.cpp  ipe_reader.h  region_map_reader.cpp  region_map_reader.h
cartocrow/renderer/: CMakeLists.txt  function_painting.cpp  function_painting.h  geometry_painting.h  geometry_renderer.cpp  geometry_renderer.h  geometry_widget.cpp  geometry_widget.h  ipe_reader.cpp  ipe_reader.h  ipe_renderer.cpp  ipe_renderer.h  painting_renderer.cpp  painting_renderer.h  render_path.cpp  render_path.h  svg_renderer.cpp  svg_renderer.h  voronoi_drawer.h
cartocrow/simplesets/: partition_algorithm.cpp  settings.h
cartocrow/treemap/: CMakeLists.txt  arrangement_helpers.cpp  arrangement_helpers.h  arrangement_helpers.hpp  aspect_ratio.cpp  aspect_ratio.h  convex.cpp  convex.h  draw_tree.cpp  draw_tree.h  misc.cpp  misc.h  ok_hsv_hsl.h  orthoconvex.cpp  orthoconvex.h  parse_tree.cpp  parse_tree.h  rectangle_helpers.h  treemap.cpp  treemap.h  treemap_helpers.cpp  treemap_helpers.h  treemap_painting.hpp  turbo_colormap.cpp  turbo_colormap.h
cartocrow/widgets/: CMakeLists.txt  double_slider.cpp  double_slider.h
cmake/: CartoCrowConfig.cmake
data/: SOURCES.md  test.tree
data/kinetic_kelp/: air-traffic-france.csv  demo.ipe
demo/: to_png.sh
demos/: CMakeLists.txt
demos/cgal_tutorial/: CMakeLists.txt  cgal_tutorial.cpp  cgal_tutorial.h
demos/chorematic_map/: chorematic_map_demo.cpp  chorematic_map_demo.h
demos/circle_segment_helpers/circle_tangents_demo/: circle_tangents_demo.cpp  circle_tangents_demo.h
demos/circle_segment_helpers/offset_demo/: CMakeLists.txt  (+2 more)
demos/isoline_simplification/: isoline_simplification_demo.cpp
demos/kinetic_kelp/: CMakeLists.txt  kinetic_kelp_demo.cpp  kinetic_kelp_demo.h  time_control_widget.cpp  time_control_widget.h
demos/kinetic_kelp/colors/: colors.cpp  colors.h
demos/kinetic_kelp/render_state_demo/: CMakeLists.txt  render_state_demo.cpp  render_state_demo.h
demos/medial_axis/: CMakeLists.txt  medial_axis.cpp  medial_axis.h  medial_axis_demo.cpp  medial_axis_demo.h
demos/simplesets/: simplesets_demo.cpp
demos/staircases/: CMakeLists.txt  brackets.cpp  brackets.h  greedy.cpp  greedy.h  move.cpp  move.h  optimal.cpp  optimal.h  staircase.cpp  staircase.h  staircases_demo.cpp  staircases_demo.h  types.h
demos/treemap/: CMakeLists.txt  parse_csv_to_tree.cpp  parse_csv_to_tree.h  parse_tree.cpp  parse_tree.h  tree.h  treemap_demo.cpp  treemap_demo.h  treemap_painting.cpp  treemap_painting.h  treemap_painting.hpp
demos/treemap/treemap_interactive/: CMakeLists.txt  treemap_interactive.cpp  treemap_interactive.h
doc/: Doxyfile
frames/: to_mp4.sh  to_png.sh
frontend/: CMakeLists.txt  cartocrow.cpp
inputs/: InputWuhan.ipe
test/: CMakeLists.txt
test/core/: core.cpp  cubic_bezier.cpp  polygon_helpers.cpp  region_arrangement.cpp  region_map.cpp
test/flow_map/: intersections.cpp  polar_line.cpp  polar_point.cpp  sweep_circle.cpp  sweep_edge.cpp
test/necklace_map/: circular_range.cpp  necklace_map.cpp
test/renderer/: ipe_renderer.cpp
test/simplesets/: poly_line_gon_intersection.cpp
test/treemap/: orthoconvex.cpp
(+20 files in other folders)
